// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CREATE_ENTITY sets creating to true on the entity that was passed in 1`] = `
Immutable.Map {
  "mockEntity": Immutable.Map {
    "data": undefined,
    "creating": true,
  },
}
`;

exports[`CREATE_ENTITY_FULFILLED add the created entity into the data on said entity 1`] = `
Immutable.Map {
  "mockEntity": Immutable.Map {
    "data": Immutable.List [
      Immutable.Map {
        "mockData": Immutable.Map {},
      },
    ],
    "selectedEntityId": undefined,
    "creating": false,
  },
}
`;

exports[`CREATE_ENTITY_REJECTED calls setEntityUpdatingHelper correctly 1`] = `[MockFunction]`;

exports[`entities reducer CREATE_SUB_ENTITY sets subEntitySaving true on the current sub entity 1`] = `
Immutable.Map {
  "currentEntity": "none",
  "mockEntity": Immutable.Map {
    "subEntitySaving": true,
  },
}
`;

exports[`entities reducer CREATE_SUB_ENTITY_FULFILLED add new subentiy into entities data 1`] = `
Immutable.Map {
  "mockEntity": Immutable.Map {
    "data": Immutable.List [
      Immutable.Map {
        "id": "mockId",
      },
    ],
  },
}
`;

exports[`entities reducer CREATE_SUB_ENTITY_FULFILLED main entity doesnt exist in state , return unchanged state 1`] = `
Immutable.Map {
  "mockEntity": Immutable.Map {
    "data": Immutable.List [],
  },
}
`;

exports[`entities reducer FETCH_DATA_FULFILLED sets the data as the immutable value passed in 1`] = `
Immutable.Map {
  "mockEntity": Immutable.Map {
    "data": Immutable.List [
      Immutable.Map {
        "mockEntityId": "mock entity id",
      },
    ],
  },
}
`;

exports[`entities reducer FETCH_DATA_ITEM_FULFILLED data item doesn't exists in entity , return unchanged state 1`] = `
Immutable.Map {
  "mockEntity": Immutable.Map {
    "data": Immutable.List [],
  },
}
`;

exports[`entities reducer FETCH_DATA_ITEM_FULFILLED data item exists in entity , make sure it updates 1`] = `
Immutable.Map {
  "mockEntity": Immutable.Map {
    "data": Immutable.List [
      Immutable.Map {
        "id": "mockId",
        undefined: undefined,
      },
    ],
  },
}
`;

exports[`entities reducer FETCH_DATA_ITEM_REJECTED calls setEntityUpdatingHelper correctly 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "mock initial state",
      Object {
        "entityName": "mockEntity",
        "type": "FETCH_DATA_ITEM_REJECTED",
      },
      false,
    ],
  ],
}
`;

exports[`entities reducer FETCH_DATA_REJECTED sets the data to an empty List 1`] = `
Immutable.Map {
  "mockEntity": Immutable.Map {
    "data": Immutable.List [],
  },
}
`;

exports[`entities reducer SET_CONIFIRMATION_DIALOG sets the confirmation dialog 1`] = `
Immutable.Map {
  "currentEntity": "mockEntity",
  "mockEntity": Immutable.Map {
    "confirmationDialogType": "mockModalType",
    "confirmationDialogMetaData": "mockModalMetaData",
  },
}
`;

exports[`entities reducer SET_CURRENT_ENTITY sets the current entity 1`] = `
Immutable.Map {
  "currentEntity": "mock current entity",
}
`;

exports[`entities reducer SET_ENTITY_UPDATING calls setEntityUpdatingHelper correctly 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "mock inital state",
      Object {
        "entityName": "mockEntity",
        "type": "SET_ENTITY_UPDATING",
      },
      undefined,
    ],
  ],
}
`;

exports[`entities reducer SET_SELECTED_ENTITY_ID with setSelectedEntityCreate() sets the current entity's selected entity id to "create" 1`] = `
Immutable.Map {
  "currentEntity": "mockEntity",
  "mockEntity": Immutable.Map {
    "selectedEntityId": "create",
  },
}
`;

exports[`entities reducer SET_SELECTED_ENTITY_ID with setSelectedEntityId() sets the current entity's selected entity id 1`] = `
Immutable.Map {
  "currentEntity": "mockEntity",
  "mockEntity": Immutable.Map {
    "selectedEntityId": "mock entity id",
  },
}
`;

exports[`entities reducer SET_SELECTED_ENTITY_ID with unsetSelectedEntityId() sets the current entity's selected entity id to "" 1`] = `
Immutable.Map {
  "currentEntity": "mockEntity",
  "mockEntity": Immutable.Map {
    "selectedEntityId": "",
  },
}
`;

exports[`entities reducer SET_SELECTED_SUB_ENTITY_ID sets the current selected sub entity id 1`] = `
Immutable.Map {
  "currentEntity": "none",
  "none": Immutable.Map {
    "selectedSubEntityId": "mockId",
  },
}
`;

exports[`entities reducer TOGGLE_ENTITY_FULFILLED when the entity is present merges the result in and sets "updating" to false 1`] = `
Immutable.Map {
  "mockEntity": Immutable.Map {
    "data": Immutable.List [
      Immutable.Map {
        "id": "mock entity id",
        "mockResult": "mock result value",
        "updating": false,
      },
    ],
  },
}
`;

exports[`entities reducer UPDATE_ENTITY calls setEntityUpdatingHelper correctly 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "mock initial state",
      Object {
        "entityId": "mock entity id",
        "entityName": "mock entity",
        "type": "UPDATE_ENTITY",
        "values": "mock values",
      },
      true,
    ],
  ],
}
`;

exports[`entities reducer UPDATE_ENTITY_FULFILLED when the entity is present merges the result in and sets "updating" to false 1`] = `
Immutable.Map {
  "mockEntity": Immutable.Map {
    "data": Immutable.List [
      Immutable.Map {
        "id": "mock entity id",
        "mockResult": "mock result value",
        "updating": false,
      },
    ],
  },
}
`;

exports[`entities reducer UPDATE_ENTITY_REJECTED calls setEntityUpdatingHelper correctly 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "mock inital state",
      Object {
        "entityId": "mock entity id",
        "entityName": "mock entity",
        "type": "UPDATE_ENTITY_REJECTED",
      },
      false,
    ],
  ],
}
`;

exports[`entities reducer UPDATE_SUB_ENTITY sets subEntitySaving true on the current sub entity 1`] = `
Immutable.Map {
  "currentEntity": "none",
  "mockEntity": Immutable.Map {
    "subEntitySaving": true,
  },
}
`;

exports[`entities reducer UPLOAD_CSV_REJECTED calls setEntityUpdatingHelper correctly 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "mock inital state",
      Object {
        "entityId": "mockId",
        "entityName": "mockEntity",
        "type": "UPLOAD_CSV_REJECTED",
      },
      false,
    ],
  ],
}
`;

exports[`entities reducer helper functions setEntityUpdatingHelper when the entity is present sets the entity's updated field 1`] = `
Immutable.Map {
  "mockEntity": Immutable.Map {
    "data": Immutable.List [
      Immutable.Map {
        "id": "mock entity id",
        "updating": true,
      },
    ],
  },
}
`;

exports[`entities reducer returns the correct initial state 1`] = `
Immutable.Map {
  "skills": Immutable.Map {
    "selectedEntityId": "",
    "sidePanelWidth": 550,
    "confirmationDialogType": undefined,
    "metaData": Immutable.Map {
      "listDependency": "users",
    },
    "readPermission": Immutable.List [
      "VIEW_ALL_SKILLS",
    ],
    "updatePermission": Immutable.List [
      "PLATFORM_MANAGE_ALL_TENANTS_ENROLLMENT",
      "MANAGE_ALL_SKILLS",
      "MANAGE_ALL_USER_SKILLS",
      "MANAGE_TENANT_ENROLLMENT",
    ],
    "createPermission": Immutable.List [
      "PLATFORM_MANAGE_ALL_TENANTS_ENROLLMENT",
      "MANAGE_ALL_SKILLS",
      "MANAGE_ALL_USER_SKILLS",
      "MANAGE_TENANT_ENROLLMENT",
    ],
  },
  "permissions": Immutable.Map {
    "selectedEntityId": "",
    "sidePanelWidth": 550,
    "confirmationDialogType": undefined,
    "readPermission": Immutable.List [
      "VIEW_ALL_ROLES",
    ],
    "updatePermission": Immutable.List [
      "PLATFORM_MANAGE_ALL_TENANTS_ENROLLMENT",
      "PLATFORM_CREATE_TENANT_ROLES",
      "VIEW_ALL_ROLES",
      "MANAGE_ALL_ROLES",
      "MANAGE_TENANT_ENROLLMENT",
    ],
  },
  "flows": Immutable.Map {
    "selectedEntityId": "",
    "sidePanelWidth": 550,
    "confirmationDialogType": undefined,
  },
  "users": Immutable.Map {
    "selectedEntityId": "",
    "sidePanelWidth": 550,
    "confirmationDialogType": undefined,
  },
  "customMetrics": Immutable.Map {
    "selectedEntityId": "",
    "sidePanelWidth": 550,
    "confirmationDialogType": undefined,
    "readPermission": Immutable.List [
      "CUSTOM_STATS_READ",
    ],
    "updatePermission": Immutable.List [
      "CUSTOM_STATS_UPDATE",
    ],
  },
  "groups": Immutable.Map {
    "selectedEntityId": "",
    "sidePanelWidth": 550,
    "confirmationDialogType": undefined,
    "metaData": Immutable.Map {
      "listDependency": "users",
    },
    "readPermission": Immutable.List [
      "VIEW_ALL_GROUPS",
    ],
    "updatePermission": Immutable.List [
      "PLATFORM_MANAGE_ALL_TENANTS_ENROLLMENT",
      "MANAGE_ALL_GROUPS",
      "MANAGE_ALL_GROUP_USERS",
      "MANAGE_ALL_GROUP_OWNERS",
      "MANAGE_TENANT_ENROLLMENT",
    ],
    "createPermission": Immutable.List [
      "PLATFORM_MANAGE_ALL_TENANTS_ENROLLMENT",
      "MANAGE_ALL_GROUPS",
      "MANAGE_ALL_GROUP_USERS",
      "MANAGE_ALL_GROUP_OWNERS",
      "MANAGE_TENANT_ENROLLMENT",
    ],
  },
  "lists": Immutable.Map {
    "selectedSubEntityId": undefined,
    "subEntity": "listItems",
    "readPermission": Immutable.List [
      "VIEW_ALL_LISTS",
    ],
    "createPermission": Immutable.List [
      "MANAGE_ALL_LISTS",
    ],
    "confirmationDialogType": undefined,
    "updatePermission": Immutable.List [
      "MANAGE_ALL_LISTS",
    ],
    "selectedEntityId": "",
    "sidePanelWidth": 550,
    "subEntitySaving": false,
  },
  "chatWidgets": Immutable.Map {
    "selectedEntityId": "",
    "sidePanelWidth": 550,
    "confirmationDialogType": undefined,
    "readPermission": Immutable.List [
      "OUTBOUND_IDENTIFIER_READ",
    ],
    "updatePermission": Immutable.List [
      "OUTBOUND_IDENTIFIER_MODIFY",
    ],
    "createPermission": Immutable.List [
      "OUTBOUND_IDENTIFIER_CREATE",
    ],
    "disablePermission": Immutable.List [
      "OUTBOUND_IDENTIFIER_DISABLE",
    ],
    "assignPermission": Immutable.List [
      "OUTBOUND_IDENTIFIER_ASSIGN",
    ],
  },
  "none": Immutable.Map {},
  "outboundIdentifiers": Immutable.Map {
    "selectedEntityId": "",
    "sidePanelWidth": 550,
    "confirmationDialogType": undefined,
    "readPermission": Immutable.List [
      "OUTBOUND_IDENTIFIER_READ",
    ],
    "updatePermission": Immutable.List [
      "OUTBOUND_IDENTIFIER_MODIFY",
    ],
    "createPermission": Immutable.List [
      "OUTBOUND_IDENTIFIER_CREATE",
    ],
    "disablePermission": Immutable.List [
      "OUTBOUND_IDENTIFIER_DISABLE",
    ],
    "assignPermission": Immutable.List [
      "OUTBOUND_IDENTIFIER_ASSIGN",
    ],
  },
  "interactionMonitoring": Immutable.Map {
    "readPermission": Immutable.List [
      "MONITOR_ALL_CALLS",
    ],
  },
  "listTypes": Immutable.Map {
    "selectedEntityId": "",
    "sidePanelWidth": 550,
    "confirmationDialogType": undefined,
  },
  "currentEntity": "none",
  "outboundIdentifierLists": Immutable.Map {
    "readPermission": Immutable.List [
      "OUTBOUND_IDENTIFIER_READ",
    ],
    "createPermission": Immutable.List [
      "OUTBOUND_IDENTIFIER_CREATE",
    ],
    "metaData": Immutable.Map {
      "listDependency": "outboundIdentifiers",
    },
    "confirmationDialogType": undefined,
    "disablePermission": Immutable.List [
      "OUTBOUND_IDENTIFIER_DISABLE",
    ],
    "updatePermission": Immutable.List [
      "OUTBOUND_IDENTIFIER_MODIFY",
    ],
    "selectedEntityId": "",
    "sidePanelWidth": 550,
    "assignPermission": Immutable.List [
      "OUTBOUND_IDENTIFIER_ASSIGN",
    ],
  },
  "roles": Immutable.Map {
    "selectedEntityId": "",
    "sidePanelWidth": 550,
    "confirmationDialogType": undefined,
    "readPermission": Immutable.List [
      "VIEW_ALL_ROLES",
    ],
    "updatePermission": Immutable.List [
      "PLATFORM_MANAGE_ALL_TENANTS_ENROLLMENT",
      "PLATFORM_CREATE_TENANT_ROLES",
      "VIEW_ALL_ROLES",
      "MANAGE_ALL_ROLES",
      "MANAGE_TENANT_ENROLLMENT",
    ],
    "createPermission": Immutable.List [
      "PLATFORM_CREATE_TENANT_ROLES",
      "MANAGE_ALL_ROLES",
    ],
  },
  "emailTemplates": Immutable.Map {
    "selectedEntityId": "",
    "sidePanelWidth": 550,
    "confirmationDialogType": undefined,
    "readPermission": Immutable.List [
      "USER_MANAGEMENT_EMAIL_READ",
    ],
    "updatePermission": Immutable.List [
      "USER_MANAGEMENT_EMAIL_UPDATE",
      "PLATFORM_USER_MANAGEMENT_EMAIL_UPDATE",
    ],
  },
}
`;
